--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -372,6 +372,14 @@
 						RelativePath="..\..\..\src\easydb_cl\PackLuaDescFileNew.h"
 						>
 					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\UnpackLuaDescFile.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\UnpackLuaDescFile.h"
+						>
+					</File>
 				</Filter>
 			</Filter>
 			<Filter
