[CHANGED] libcoco node io
Former-commit-id: 16de66e2659e996685479a97dea0309ebdfc7ab3

--- a/coceditor/platform/msvc2008/projects/libcoco.vcproj
+++ b/coceditor/platform/msvc2008/projects/libcoco.vcproj
@@ -179,30 +179,138 @@
 			<Filter
 				Name="nodes"
 				>
-				<File
-					RelativePath="..\..\..\src\libcoco\PackAnimation.cpp"
+				<Filter
+					Name="picture"
 					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\libcoco\PackAnimation.h"
+					<File
+						RelativePath="..\..\..\src\libcoco\PackPicture.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\libcoco\PackPicture.h"
+						>
+					</File>
+					<Filter
+						Name="lua"
+						>
+						<File
+							RelativePath="..\..\..\src\libcoco\PictureFromLua.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\PictureFromLua.h"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\PictureToLuaString.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\PictureToLuaString.h"
+							>
+						</File>
+					</Filter>
+					<Filter
+						Name="bin"
+						>
+						<File
+							RelativePath="..\..\..\src\libcoco\PictureToBin.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\PictureToBin.h"
+							>
+						</File>
+					</Filter>
+				</Filter>
+				<Filter
+					Name="label"
 					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\libcoco\PackLabel.cpp"
+					<File
+						RelativePath="..\..\..\src\libcoco\PackLabel.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\libcoco\PackLabel.h"
+						>
+					</File>
+					<Filter
+						Name="lua"
+						>
+						<File
+							RelativePath="..\..\..\src\libcoco\LabelFromLua.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\LabelFromLua.h"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\LabelToLuaString.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\LabelToLuaString.h"
+							>
+						</File>
+					</Filter>
+					<Filter
+						Name="bin"
+						>
+						<File
+							RelativePath="..\..\..\src\libcoco\LabelToBin.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\LabelToBin.h"
+							>
+						</File>
+					</Filter>
+				</Filter>
+				<Filter
+					Name="anim"
 					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\libcoco\PackLabel.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\libcoco\PackPicture.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\libcoco\PackPicture.h"
-					>
-				</File>
+					<File
+						RelativePath="..\..\..\src\libcoco\PackAnimation.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\libcoco\PackAnimation.h"
+						>
+					</File>
+					<Filter
+						Name="lua"
+						>
+						<File
+							RelativePath="..\..\..\src\libcoco\AnimFromLua.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\AnimFromLua.h"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\AnimToLuaString.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\AnimToLuaString.h"
+							>
+						</File>
+					</Filter>
+					<Filter
+						Name="bin"
+						>
+						<File
+							RelativePath="..\..\..\src\libcoco\AnimToBin.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\AnimToBin.h"
+							>
+						</File>
+					</Filter>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="packer"
