[ADDED] from bin
Former-commit-id: bf93030a5a831a60c35dc863088dff7c508b3f5b

--- a/coceditor/platform/msvc2008/projects/libcoco.vcproj
+++ b/coceditor/platform/msvc2008/projects/libcoco.vcproj
@@ -214,6 +214,14 @@
 						Name="bin"
 						>
 						<File
+							RelativePath="..\..\..\src\libcoco\PictureFromBin.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\PictureFromBin.h"
+							>
+						</File>
+						<File
 							RelativePath="..\..\..\src\libcoco\PictureToBin.cpp"
 							>
 						</File>
@@ -257,6 +265,14 @@
 					<Filter
 						Name="bin"
 						>
+						<File
+							RelativePath="..\..\..\src\libcoco\LabelFromBin.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\LabelFromBin.h"
+							>
+						</File>
 						<File
 							RelativePath="..\..\..\src\libcoco\LabelToBin.cpp"
 							>
