[CHANGED] lr打包工具换成新版本
Former-commit-id: 70184d3f60078794001298707557061190a045c1

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -357,19 +357,19 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\src\easydb_cl\PackEP.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\PackEP.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\easydb_cl\PackLuaDescFile.cpp"
 						>
 					</File>
 					<File
 						RelativePath="..\..\..\src\easydb_cl\PackLuaDescFile.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\..\src\easydb_cl\PackLuaDescFileNew.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\..\src\easydb_cl\PackLuaDescFileNew.h"
 						>
 					</File>
 					<File
