--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "easyparticle3d/external/ps"]
 	path = easyparticle3d/external/ps
 	url = ssh://git@oa.ejoy.com/users/zz/ps.git
+[submodule "coceditor/external/ps"]
+	path = coceditor/external/ps
+	url = ssh://git@oa.ejoy.com/users/zz/ps.git
